--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>K8ssandra Config Builder</title>
     <meta property="og:title" content="K8ssandra Config Builder" />
-    <meta property="og:description" content="Built on the rock-solid Apache Cassandra® NoSQL database, K8ssandra brings together a complete operational data platform for Kubernetes including APIs, monitoring, and backups." />
+    <meta property="og:description" content="Toggle configurations and get the exact code you need to set up K8ssandra in your workflow." />
     <meta property="og:image" content="<%= BASE_URL %>og-image-k8ssandra-logo.png" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
