--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <title>K8ssandra Config Builder</title>
     <meta property="og:title" content="K8ssandra Config Builder" />
     <meta property="og:description" content="Toggle configurations and get the exact code you need to set up K8ssandra in your workflow." />
-    <meta property="og:image" content="<%= BASE_URL %>og-image-k8ssandra-logo.png" />
+    <meta property="og:image" content="https://deploy-preview-65--objective-lichterman-e253ab.netlify.app/og-image-k8ssandra-logo.png" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
     <link href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" rel="stylesheet">
