--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link rel="icon" href="<%= process.env.BASE_URL %>favicon.ico">
     <title>K8ssandra Config Builder</title>
     <meta property="og:title" content="K8ssandra Config Builder" />
     <meta property="og:description" content="Toggle configurations and get the exact code you need to set up K8ssandra in your workflow." />
