--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,9 @@
     <meta property="og:title" content="K8ssandra Config Builder" />
     <meta property="og:description" content="Toggle configurations and get the exact code you need to set up K8ssandra in your workflow." />
     <meta property="og:image" content="https://start.k8ssandra.io/og-image-k8ssandra-logo.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta name="twitter:card" content="summary_large_image" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
     <link href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" rel="stylesheet">
